# ript-virtual-recep

./: .gitignore  docker-compose.yml
server/: Dockerfile  Pipfile  README.md  alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/app/: main.py
server/app/api/: api_accessData.py  api_appointmentManager.py  api_classSchedule.py  api_faceRecognition.py  api_login.py  api_user.py  api_weeklySchedule.py  send_mail.py  test_send_mail.py
server/app/core/: config.py  data.pkl  security.py
server/app/data/001205020978/: 001205020978_0_base64.txt  001205020978_1_base64.txt  001205020978_2_base64.txt  backup.pkl
server/app/data/001205056637/: backup.pkl
server/app/data/024094003499/: backup.pkl  (+3 more)
server/app/db/: base.py  init_db.py
server/app/helper/: email_template.py  enums.py  exception_handler.py  face_recognition_helpers.py  format_day.py  login_manager.py  paging.py  update_expired.py  update_guests.py  update_officers.py  update_students.py
server/app/models/: __init__.py  base_class.py  can_bo.py  can_bo_lich_tuan.py  can_bo_lop_tin_chi.py  cuoc_hen.py  hoc_phan.py  khach.py  lich_hen.py  lich_hoc.py  lich_tuan.py  lop_hanh_chinh.py  lop_tin_chi.py  nguoi_dung.py  nguoi_dung_su_kien.py  nhom_tin_chi.py  phong_ban.py  sinh_vien.py  sinh_vien_nhom_tin_chi.py  su_kien.py
server/app/schemas/: base.py  user.py
server/app/services/: AppointmentManager.py  ClassSchedule.py  ConnectionManager.py  EmailManager.py  ExtractCCCD.py  ImageManager.py  ModelManager.py  QRmanager.py  WeeklySchedule.py  send_email_service.py  srv_user.py
(+18 files in other folders)
