[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["nguyenddat <DatND.B23CC032@stu.ptit.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
